--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
-  margin: 0;
-  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -8,60 +7,69 @@ body {
 }
 
 .container {
-  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 2em;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.switch {
+/* ------------------------------------------- */
+
+input[type="checkbox"].toggle {
+  opacity: 0;
+  position: absolute;
+  top: -9000px;
+  left: -9000px;
+}
+
+input[type="checkbox"].toggle + label {
   position: relative;
-  display: inline-block;
-  width: 110px;
-  height: 60px;
-  margin: 0 10px;
-}
-
-.slider {
-  position: absolute;
+  display: flex;
+  align-items: center;
   cursor: pointer;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: #cdcdcd;
-  border-radius: 35px;
-  transition: 0.4s;
-}
-.on-off {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 700;
-  color: white;
-  position: absolute;
-  top: 50%;
-  left: 25%;
-  transform: translate(-50%, -50%);
-}
-.switch input {
-  display: none;
 }
 
-.slider:before {
+input[type="checkbox"].toggle + label::before {
+  -webkit-transition: background-color 0.4s ease-in-out;
+  transition: background-color 0.4s ease-in-out;
+  content: "";
+  width: 6.875em;
+  height: 3.75em;
+  border-radius: 2.1875em;
+  margin-right: 0.25em;
+  background-color: #ccc;
+  outline: 1px solid rgb(131, 119, 119);
+}
+input[type="checkbox"].toggle + label::after {
+  -webkit-transition: background-color 0.4s ease-in-out,
+    transform 0.3s ease-in-out;
+  transition: background-color 0.4s ease-in-out, transform 0.3s ease-in-out;
   position: absolute;
   content: "";
-  width: 50px;
-  height: 50px;
-  left: 5px;
-  bottom: 5px;
-  border-radius: 50%;
+  left: 0.4em;
+  width: 3.125em;
+  height: 3.125em;
+  border-radius: 3.125em;
   background-color: white;
-  transition: 0.4s;
+  outline: 1px solid rgb(131, 119, 119);
 }
 
-input:checked + .slider {
+input[type="checkbox"].toggle:focus + label::before {
+  outline: 1px solid rgb(65, 65, 65);
+}
+input[type="checkbox"].toggle:focus + label::after {
+  outline: 1px solid rgb(65, 65, 65);
+}
+
+input[type="checkbox"].toggle:checked + label::before {
   background-color: rgb(158, 235, 5);
 }
-input:checked + .slider:before {
-  transform: translateX(50px);
+
+input[type="checkbox"].toggle:checked + label::after {
+  /* left: 3.325em; */
+  transform: translateX(95%);
+  background-color: white;
 }
