--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 }
 
 body {
-  background-color: #fffef2;
+  background-color: #ffffff;
 }
 
 .container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 2em;
+  grid-template-columns: repeat(1, 1fr);
+  row-gap: 2em;
   position: absolute;
   top: 50%;
   left: 50%;
