--- a/style.css
+++ b/style.css
@@ -97,8 +97,8 @@ input[type="checkbox"].toggle:checked + label::after {
     transparent 14px
   );
   position: absolute;
-  top: 14%;
-  left: 4%;
+  top: 60px;
+  left: 50px;
   width: 8em;
   height: 8em;
   scale: 0.8;
@@ -123,8 +123,8 @@ input[type="checkbox"].toggle:checked + label::after {
   background-color: #5b3cd1;
   opacity: 98%;
   position: absolute;
-  bottom: 14%;
-  right: 4%;
+  bottom: 60px;
+  right: 50px;
   width: 8em;
   height: 8em;
   scale: 0.8;
