--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ input[type="checkbox"].toggle {
 }
 
 input[type="checkbox"].toggle + label {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
   position: relative;
   display: flex;
   align-items: center;
