--- a/style.css
+++ b/style.css
@@ -3,11 +3,6 @@
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
   background-color: #ffffff;
 }
 
@@ -15,6 +10,10 @@ body {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   row-gap: 2em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* ------------------------------------------- */
