Made a fun game with JS

--- a/style.css
+++ b/style.css
@@ -3,10 +3,21 @@
 }
 
 body {
-  background-color: #ffffff;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  background: repeating-linear-gradient(
+    -45deg,
+    #5b3cd1,
+    #5b3cd1 2px,
+    white 2px,
+    white 50%
+  );
 }
 
 .container {
+  background-color: white;
+  padding: 30px;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   row-gap: 2em;
